# Snake

./: CMakeLists.txt  README.md
config/: settings.json
saves/: demo.snake
src/: ActionButton.cpp  ActionButton.h  config.cpp  config.h  gameplane.cpp  gameplane.h  gameplane.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
